...
    <string name="Password_text">Password</string>
    <string name="Login_text">LOGIN</string>
    <string name="Create_New_Account_Text">Non hai ancora un account? Creane uno</string>
    <string name="Insert_correct_data">Perfavore, inserisci i dati corretti</string>
    <string name="Try_Again">Perfavore, riprova</string>
    <string name="Login_Failed">Login fallito</string>
    <string name="Dialog_neutral_button_login_failed">OK</string>
    <string name="Login_Successful">Login eseguito con successo!</string>
    <string name="desc_unisannio">Logo Unisannio</string>
    <string name="desc_kasteca">Logo app</string>

    <!-- stringhe per la RegistrationActivity -->
    <string name="Registration_Failed">Registrazione fallita</string>
...


    <!-- stringhe per la RichiestaIscrizioneActivity -->
    <string name="iscriviti_a_un_corso">Iscriviti a un corso</string>
    <string name="chiedi_al_docente_il_codice">Chiedi al docente il codice del corso e inseriscilo qui</string>
    <string name="Codice_Corso_text">Codice Corso</string>
    <string name="bottone_richiesta_iscrizione">RICHIEDI ISCRIZIONE</string>
    <string name="Codice_Corso_non_corretto">Il codice inserito non appartiene a nessun corso esistente</string>
    <string name="Studente_gia_iscritto">Sei già iscritto a questo corso</string>
    <string name="Richiesta_gia_inviata">Hai già inviato una richiesta per questo corso</string>

    <!-- stringhe per la ListaStudentiIscrittiActivity -->
    <string name="nessuno_studente_iscritto">Non ci sono studenti iscritti al corso</string>
    <string name="Dialog_neutral_button_nessuno_studente_iscritto">OK</string>
    <string name="Dialog_cancellazione_stuednte_question">Sei sicuro di volere cancellare lo Studente?</string>
    <string name="Dialog_neutral_button_cancella_studente">Si</string>
...
